Update JUnit #97